# anyascii

./: .gitattributes  .gitignore  .travis.yml  CHANGELOG.md  LICENSE  README.md  anyascii.go  composer.json  jitpack.yml  package.json  pom.xml  subtree_push.sh  table.tsv  test.cmd  test.sh
.github/workflows/: c.yml  ci.yml  csharp.yml  elixir.yml  go.yml  java.yml  js.yml  julia.yml  php.yml  python.yml  ruby.yml  rust.yml  sh.yml
c/: anyascii.c  anyascii.h  test.sh
csharp/: AnyAscii.sln
csharp/src/: AnyAscii.csproj  Transliteration.blocks.cs  Transliteration.cs
csharp/test/: TransliterationTest.cs  test.csproj
go/: README.md  anyascii.go  anyascii_test.go  bank.go  block.go  go.mod  strings.go
go/data/: 000.go  001.go  002.go  003.go  004.go  005.go  006.go  007.go  008.go  009.go  00a.go  00b.go  00c.go  00d.go  00e.go  00f.go  010.go  011.go  012.go  013.go  014.go  015.go  016.go  017.go  018.go  019.go  01a.go  01b.go  01c.go  01d.go  01e.go  01f.go  020.go  021.go  022.go  023.go  024.go  025.go  026.go  027.go  (+482 more)
impl/c/: CMakeLists.txt  anyascii.c  anyascii.h  main.c  test.c  test.sh  toolchain.cmake  utf8.c  utf8.h
impl/elixir/: .formatter.exs  .gitignore  LICENSE  README.md  mix.exs
impl/go/: README.md  anyascii.go  anyascii_test.go  bank.go  block.go  data.go
impl/java/: pom.xml
impl/js/: README.md  any-ascii.d.ts  any-ascii.js  any-ascii.mjs  block.js  package.json  test.js
impl/julia/: Project.toml  README.md
impl/perl/: AnyAscii.pm
impl/php/: AnyAscii.php  README.md  composer.json  test.php
impl/python/: README.md  pyproject.toml  setup.py
impl/python/anyascii/: __init__.py
impl/python/anyascii/_data/: 002  006  007  008  00b  01  010  012  018  01a  01b  01d  020  026  02e  035  037  03d  041  043  044  05  052  06  070  074  07b  088  09  09f  0a  0a6  0ab  0fa  0fb  105  107  109  10f  11  (+127 more)
impl/python/tests/: test_anyascii.py
impl/ruby/: README.md  any_ascii.gemspec
impl/rust/: Cargo.toml  LICENSE  README.md
impl/rust/src/: bank.txt  bank0.txt  bank1.txt  bank2.txt  block.rs  data.rs  lib.rs  main.rs
impl/rust/src/data/: 000  001  002  004  005  006  007  008  009  00b  00c  00d  00e  010  011  012  013  014  015  016  017  018  019  01b  01c  01d  01e  020  021  022  023  024  025  026  027  028  029  02a  02b  02c  (+573 more)
impl/sh/: anyascii  test.sh
impl/swift/: Package.swift
input/: NushuSources.txt  TangutSources.txt  Unicode-MdC-Mapping-v1.utf8.txt  Unidecode.pl  Unihan_Variants.txt  bamum.csv  braille.tsv  coptic.tsv  cyrillic.tsv  discord-emojis.json  discord.emojis.json  ethiopic.csv  gothic.tsv  greek-math.tsv  greek-symbols.tsv  greek.tsv  han-misc.tsv  kana.csv  math-symbols-a.tsv  math-symbols-b.tsv  mende-kikakui.csv  nko.tsv  ocr.tsv  tangut-lfw-unicode.csv  tangutdb-1-0.csv  tangutdb-1-3-1.csv  tangutdb-4-0.tsv  ucas-blackfoot.csv  ucas-carrier.csv  ucas-inuktitut.csv  ucas.csv  unidecode.tsv  vai.csv
input/tables/: adlam.tsv  aegean-numbers.tsv  ahom.tsv  alchemical-symbols.tsv  alchemical.tsv  ancient-greek-musical-notation.tsv  ancient-greek-numbers.tsv  ancient-symbols.tsv  arabic-symbols.tsv  arabic.tsv  armenian.tsv  arrows.tsv  avestan.tsv  balinese.tsv  bamum.tsv  bassa-vah.tsv  batak.tsv  bengali.tsv  bhaiksuki.tsv  bopomofo.tsv  box-drawing.tsv  brahmi.tsv  braille.tsv  buginese.tsv  canadian-syllabics.tsv  carian.tsv  caucasian-albanian.tsv  chakma.tsv  cham.tsv  chess-symbols.tsv  chorasmian.tsv  cjk-compatibility-forms.tsv  cjk-compatibility.tsv  cjk-misc.tsv  cjk-radicals.tsv  cjk-strokes.tsv  cjk-symbols-and-punctuation.tsv  combining-diacritical-marks.tsv  common-indic-number-forms.tsv  control-pictures.tsv  (+198 more)
java/: pom.xml
js/: README.md  any-ascii.d.ts  any-ascii.js  block.js  package.json  test.js
js/data/: 000.js  001.js  002.js  003.js  004.js  005.js  006.js  007.js  008.js  009.js  00a.js  00b.js  00c.js  00d.js  00e.js  00f.js  010.js  011.js  012.js  013.js  014.js  015.js  016.js  017.js  018.js  019.js  01a.js  01b.js  01c.js  01d.js  01e.js  01f.js  020.js  021.js  022.js  023.js  024.js  025.js  026.js  027.js  (+545 more)
julia/: Project.toml  README.md
julia/test/: runtests.jl
php/: AnyAscii.php  README.md  composer.json  test.php
php/_data/: _000.php  _001.php  _002.php  _003.php  _004.php  _005.php  _006.php  _007.php  _008.php  _009.php  _00a.php  _00b.php  _00c.php  _00d.php  _00e.php  _00f.php  _010.php  _011.php  _015.php  _016.php  _017.php  _018.php  _019.php  _01a.php  _01b.php  _01c.php  _01d.php  _01e.php  _01f.php  _020.php  _021.php  _022.php  _023.php  _024.php  _026.php  _027.php  _029.php  (+315 more)
python/: README.md  pyproject.toml  setup.py  tox.ini
python/anyascii/: __init__.py  _x000.py  _x002.py  _x003.py  _x004.py  _x005.py  _x007.py  _x00c.py  _x00e.py  _x00f.py  _x012.py  _x016.py  _x017.py  _x01d.py  _x01e.py  _x01f.py  _x020.py  _x021.py  _x022.py  _x025.py  _x027.py  _x028.py  _x029.py  _x02c.py  _x02f.py  _x032.py  _x033.py  _x038.py  _x039.py  _x03a.py  _x03b.py  _x03f.py  _x043.py  _x044.py  _x047.py  _x048.py  _x049.py  _x04a.py  _x04c.py  _x04d.py  (+171 more)
python/anyascii/_data/: 000  001  002  003  004  005  006  007  008  009  00a  00b  00c  00d  00e  00f  010  011  012  013  014  015  016  017  018  019  01a  01b  01c  01d  01e  01f  020  021  022  023  024  025  026  027  (+1065 more)
python/tests/: test_anyascii.py
ruby/: README.md  any_ascii.gemspec
rust/: Cargo.toml
rust/src/: bank.txt  block.rs  lib.rs  main.rs  strings.txt
sh/: anyascii  test.sh
unidecode/: Unidecode.pl  generate.pl  generate.py  unidecode-py.tsv
(+4457 files in other folders)
