[package]
name = "any_ascii"
version = "0.1.7-dev"
authors = ["Hunter WB <hunter@hunterwb.com>"]
homepage = "https://anyascii.com"
repository = "https://github.com/anyascii/anyascii"
description = "Unicode to ASCII transliteration"
license = "ISC"
categories = ["text-processing", "internationalization"]
keywords = [
  "unicode",
  "ascii",
  "transliteration",
  "emoji",
  "unidecode"
]
readme = "../README.md"

[[bin]]
name = "anyascii"
path = "src/main.rs"

[badges]
travis-ci = { repository = "anyascii/anyascii" }
