[package]
name = "any_ascii"
version = "0.2.0"
authors = ["Hunter WB <hunter@hunterwb.com>"]
edition = "2018"
homepage = "https://anyascii.com"
repository = "https://github.com/anyascii/anyascii"
description = "Unicode to ASCII transliteration"
license = "ISC"
categories = ["text-processing", "internationalization", "no-std", "command-line-utilities"]
keywords = ["unicode", "ascii", "transliteration", "emoji", "unidecode"]
readme = "../README.md"

[[bin]]
name = "anyascii"
path = "src/main.rs"
