[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "anyascii"
authors = [{name = "Hunter WB", email = "hunter@hunterwb.com"}]
readme = "README.md"
keywords = [
	"unicode",
	"ascii",
	"transliteration",
	"utf8",
	"romanization",
	"slug",
	"emoji",
	"unidecode",
	"normalization",
]
requires-python = ">=3.3"
classifiers = [
	"License :: OSI Approved :: ISC License (ISCL)",
	"Programming Language :: Python :: 3 :: Only",
	"Topic :: Text Processing :: General",
	"Topic :: Text Processing :: Linguistic",
]
dynamic = ["version", "description"]

[project.urls]
Homepage = "https://github.com/anyascii/anyascii"
Demo = "https://anyascii.com"
Changelog = "https://github.com/anyascii/anyascii/blob/master/CHANGELOG.md"

[tool.ruff]
select = ["F", "E", "I"]
